ChangeLog for KNotes
====================

2002/05/10  Michael Brade <brade@kde.org>

    * fixed crash on exit due to wrong deletion order
    * fixed #42437: preferences never got saved (whoops!!)

2002/03/08  Michael Brade <brade@kde.org>

    * fixed #38958: Show note color in notes menu

2002/01/23  Michael Brade <brade@kde.org>

    * fixed #36376, #36799: MMB for new note

2002/01/22  Michael Brade <brade@kde.org>

    * fixed #37222: Alt-F4 "deletes" note
    * fixed #37176: ask for confirmation before deleting a note
    * fixed #36374: double click to rename a note
    * email updates

2001/09/09  Michael Brade <brade@informatik.uni-muenchen.de>

    * improved the config dialog
    * almost finished rich text notes

2001/09/08  Michael Brade <brade@informatik.uni-muenchen.de>

    * bugfixes to make KNotes work with Qt3

2001/09/04  Michael Brade <brade@informatik.uni-muenchen.de>

    * compile with Qt3
    * started some work on rich text notes (no GUI yet)

2001/07/13  Michael Brade <brade@informatik.uni-muenchen.de>

    * fixed #28879 (titles were not centered)

2001/07/11  Michael Brade <brade@informatik.uni-muenchen.de>

    * fixed #28627 (%t in Mail Action)
    * started to fix #23567 (printing)

2001/07/09  Michael Brade <brade@informatik.uni-muenchen.de>

    * don't reread the knotesui.rc all the time a new note is created

2001/06/23  Michael Brade <brade@informatik.uni-muenchen.de>

    * fixed #18086 (add a size grip for the notes)
    * update the title layout if the font was changed

2001/06/17  Michael Brade <brade@informatik.uni-muenchen.de>

    * finished porting KNotes to the XMLGUI framework
    * fixed auto-indent
    * fixed the RMB menu

2001/06/11  Michael Brade <brade@informatik.uni-muenchen.de>

    * improved Configdialog:
      - use nicer and bigger icons
      - removed the size setting from the local note config dialog
      - #20172: separate font settings for title and body